--- a/rophelia.html
+++ b/rophelia.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project</title>
+    <title>Rophelia</title>
+    <link rel="icon" href="https://cdn-icons-png.freepik.com/256/1055/1055666.png">
 
     <meta name="description" content="">
     <meta name="keywords" content="">
